# ampersand

./: .gitignore  CMakeLists.txt  README.md
ejercicios_modulo_1/parte1/: ej1234.c  ej4.c  ej5y7.c  palindromo.c
entrega_grupo_ampersand/primera_parte/: global.c  global.h  main  main.c
entrega_grupo_ampersand/segunda_parte/: estudiantes.c  estudiantes.h  main  main.c  main2.c
